--- a/app/src/main/res/layout/fragment_soubi.xml
+++ b/app/src/main/res/layout/fragment_soubi.xml
@@ -13,7 +13,7 @@
         android:id="@+id/yoroi_list"
         android:layout_width="203dp"
         android:layout_height="54dp"
-        android:background="@color/white"
+        android:background="@drawable/soubi_list"
         android:elevation="2dp"
         android:spinnerMode="dialog"
         android:textAlignment="center"
@@ -27,7 +27,7 @@
         android:layout_width="203dp"
         android:layout_height="54dp"
         android:layout_marginEnd="16dp"
-        android:background="@color/white"
+        android:background="@drawable/soubi_list"
         android:elevation="2dp"
         android:spinnerMode="dialog"
         android:textAlignment="center"
@@ -41,7 +41,7 @@
         android:layout_width="203dp"
         android:layout_height="54dp"
         android:layout_marginEnd="16dp"
-        android:background="@color/white"
+        android:background="@drawable/soubi_list"
         android:elevation="2dp"
         android:spinnerMode="dialog"
         android:textAlignment="center"
@@ -419,7 +419,7 @@
         android:id="@+id/buki_list"
         android:layout_width="203dp"
         android:layout_height="54dp"
-        android:background="@drawable/soubi_imagebutton"
+        android:background="@drawable/soubi_list"
         android:elevation="2dp"
         android:spinnerMode="dialog"
         android:textAlignment="center"
