--- a/app/src/main/res/layout/fragment_tutorial.xml
+++ b/app/src/main/res/layout/fragment_tutorial.xml
@@ -7,18 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".tutorial">
 
-    <FrameLayout
-        android:layout_width="407dp"
-        android:layout_height="664dp"
-        app:layout_constraintBottom_toTopOf="@+id/titlebtn2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
-
-    </FrameLayout>
-
     <Button
         android:id="@+id/backbtn"
         android:layout_width="wrap_content"
@@ -49,4 +37,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/nextbtn"
         app:layout_constraintStart_toEndOf="@+id/backbtn" />
+
+    <ImageView
+        android:id="@+id/tutorial_image"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toTopOf="@+id/titlebtn2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@tools:sample/avatars" />
 </androidx.constraintlayout.widget.ConstraintLayout>
